--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
   "scripts": {
     "dev": "vite",
     "ng-serve": "ng serve",
-    "build": "ng build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/common": "^20.3.0",
-    "@google/genai": "^1.29.1",
     "@angular/build": "^20.3.0",
     "@angular/cli": "^20.3.0",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
+    "@angular/compiler-cli": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/platform-browser": "^20.3.0",
+    "@google/genai": "^1.29.1",
+    "rxjs": "^7.8.2",
     "tailwindcss": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
