--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smuve-ai-music-manager",
-  "description": "S.M.U.V.E. AI Chatbot Music Manager",
+  "description": SmuveJeffPresents "S.M.U.V.E. AI Chatbot Music Manager",
   "private": true,
   "version": "1.0.0",
   "type": "module",
